--- a/Web.config
+++ b/Web.config
@@ -11,6 +11,6 @@
       <compilation debug="true" targetFramework="4.0" />
     </system.web>
   <connectionStrings>    
-    <add name="ConnectionString" connectionString="Data Source=serverreestr.vmr.gov.ua;Initial Catalog=ATUU;Persist Security Info=True;User ID=VVDRVVIN; Password=1QAZ2wsx" providerName="System.Data.SqlClient"/>
+    <add name="ConnectionString" connectionString="Data Source=;Initial Catalog=;Persist Security Info=True;User ID=; Password=" providerName="System.Data.SqlClient"/>
   </connectionStrings>    
 </configuration>
